--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "type": "git",
     "url": "https://github.com/lumina-io/qb-compat.git"
   },
+  "publishConfig": {
+    "directory": "lib"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@citizenfx/client": "latest",
@@ -36,3 +39,4 @@
     "typescript": "^5.8.3"
   }
 }
+
